further fixed alignment of work images for mobile

--- a/src/main.scss
+++ b/src/main.scss
@@ -222,6 +222,7 @@ html {
             display: flex;
             flex-direction: column;
             justify-content: space-between;
+            align-items: center;
 
             img {
                 display: block;
